frontend/src/index.css
:root {
  --typewriter-background: #212529;
  --typewriter-color: white;
  --typewriter-characters: 18;
  --animation-time: 0.9s;
  --animation-delay: 0.75s;
  --accent-color: rgb(0, 48, 4);
}

:root {
  --header-bg: #131416;
  --body-bg: #212529;
  --modal-bg: #212529;
  --color-white: #ffffff;
  --side-bar-bg: #1a1d20;
  --border-bg: #80808040;
  --active-chat-bg: #282d2e;
  --active-chat-hover-bg: #303738;
  --hover-bg: #202427;
  --active-bg: #363e3f;
  --text-secondary: #d6d6d6;
  --message-bg-right: #071c3d;
  --message-bg-left: #353535;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  box-sizing: border-box;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.cursor-pointer {
  cursor: pointer;
}
.cursor-default {
  cursor: default;
}
.d-hidden {
  opacity: 0;
}

.Crop-Controls {
  margin-bottom: 10px;
}
.Crop-Controls > * {
  margin-bottom: 3px;
}

img {
  max-width: 100%;
}

.modal-content {
  background-color: var(--modal-bg) !important;
}

@media screen and (max-width: 600px) {
  .chat-sidebar {
    width: 100% !important;
  }
  .holder {
    min-width: 0px !important;
  }
  .profile-section {
    width: 100% !important;
  }
}
@media screen and (min-width: 600px) and (max-width: 912px) {
  .chat-sidebar {
    width: 300px !important;
  }
  .holder {
    min-width: 295px !important;
  }
  .profile-section {
    width: 300px !important;
  }
}
@media screen and (min-width: 912px) {
  .chat-sidebar {
    width: 450px !important;
  }
  .profile-section {
    width: 450px !important;
  }
}

.chat-sidebar {
  background-color: var(--side-bar-bg) !important;
  color: var(--color-white) !important;
  z-index: 100 !important;
  border-right: none !important;
}
.chat-sidebar-header {
  background-color: var(--header-bg) !important;
}
.menu-sidebar {
  background-color: var(--header-bg) !important;
  color: var(--color-white) !important;
  width: 110px !important;
}
.profile-section {
  background-color: var(--side-bar-bg) !important;
  color: var(--color-white) !important;
  border-right: none !important;
}
.profile-section-header {
  background-color: var(--header-bg) !important;
}
.holder {
  min-width: 450px;
  max-width: 100%;
  height: 100vh;
  background-color: var(--side-bar-bg);
  transition: min-width 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.chat-holder {
  height: 100vh;
  color: var(--color-white);
  border-left: 1px solid var(--body-bg);
}

/* typewriting animation */

.typewriter-text {
  text-align: center;
  height: 2.5rem;
  transform: scale(1.5);
  color: var(--color-white);
  position: relative;
  width: max-content;
}
.typewriter-text::before,
.typewriter-text::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
}
.typewriter-text::before {
  background-color: var(--typewriter-background);
  animation: typewriter var(--animation-time)
    steps(var(--typewriter-characters)) var(--animation-delay) forwards;
}
@keyframes typewriter {
  to {
    left: 100%;
  }
}
.typewriter-text::after {
  width: 0.12em;
  height: 2.5rem;
  background: var(--typewriter-color);
  animation: typewriter var(--animation-time)
      steps(var(--typewriter-characters)) var(--animation-delay) forwards,
    blinker 500ms infinite forwards;
  opacity: 1;
}
@keyframes blinker {
  to {
    opacity: 0;
  }
}
@keyframes fadein {
  to {
    opacity: 1;
  }
}

.chat-name {
  border-radius: 5px;
  box-sizing: border-box;
}
.chat-name.active {
  background-color: var(--active-chat-bg);
}
.chat-name.active:hover {
  background-color: var(--active-chat-hover-bg);
}
.chat-name:hover {
  background-color: var(--hover-bg);
}
.chat-name:active {
  background-color: var(--active-bg);
}

.custom-placeholder::placeholder {
  color: var(--color-white) !important;
  opacity: 0.7 !important;
}
.typing-input {
  background: var(--typewriter-background) !important;
  color: var(--color-white) !important;
  border: 1px solid rgba(255, 255, 255, 0) !important;
  border-radius: 25px !important;
  outline: none !important;
  box-shadow: none !important;
  font-size: 0.9rem !important;
}
.typing-input:focus {
  border: 1px solid gray !important;
}
.typing-input:hover {
  border: 1px solid gray !important;
}
.message-icons {
  opacity: 0.7 !important;
}
.message-icons:hover {
  background-color: var(--hover-bg) !important;
}
.w-60 {
  max-width: 60% !important;
}

.back-arrow:hover {
  transform: translateX(-10px);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.hidden {
  margin: 0 !important;
  padding: 0 !important;
  opacity: 0 !important;
  visibility: hidden !important;
  max-height: 0 !important;
  overflow: hidden !important;
  transition: opacity 0.3s ease, visibility 0.3s ease, max-height 0.3s ease,
    padding 0.3s ease, margin 0.3s ease !important;
}

.visible {
  opacity: 1 !important;
  visibility: visible !important;
  max-height: 100px !important; /* Adjust to your div's natural height */
  margin-bottom: 0.5rem;
  padding: 0.3rem;
  transition: opacity 0.3s ease, visibility 0.3s ease, max-height 0.3s ease,
    padding 0.3s ease, margin 0.3s ease !important;
}
.border-radius-10 {
  border-radius: 10px !important;
}

/* custom scroll bar */
::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: gray;
  border-radius: 20px;
  border: 6px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: lightgray;
}

/* General message container */

.chat-background {
  background: url(../chat_background.png) !important;
  background-size: cover !important;
  background-position: center !important;
}
.chat-header {
  background: var(--header-bg) !important;
  max-height: 62px !important;
  height: 62px !important;
}
.chat-typing {
  max-height: 100px !important;
  background: var(--side-bar-bg) !important;
}

.time-stamp {
  background-color: var(--header-bg);
  color: var(--color-white);
  border-radius: 5px;
  width: max-content;
  font-size: 0.65rem;
}
.message-container.sender {
  justify-content: flex-end !important;
}

.message-container.receiver {
  justify-content: flex-start !important;
}

.message-bubble {
  position: relative !important;
  max-width: 80% !important;
  word-wrap: break-word !important;
  min-width: 60px !important;
  min-height: 2rem !important;
}
.message-text {
  padding-left: 2px;
  font-size: 0.85rem !important;
  line-height: 1.2 !important;
}
.chat-time-stamp {
  font-size: 0.55rem;
  color: var(--text-secondary);
  bottom: 5px;
  right: 10px;
  min-width: 50px;
  line-height: 1;
}
.sender-bubble {
  background-color: var(--message-bg-right) !important;
  color: var(--text-secondary) !important;
  border-radius: 7px 0 7px 7px !important;
}
.receiver-bubble {
  background-color: var(--message-bg-left) !important;
  color: var(--text-secondary) !important;
  border-radius: 0 7px 7px 7px !important;
}
.sender-bubble::after {
  content: " ";
  position: absolute;
  width: 0;
  height: 0;
  left: auto;
  right: -11px;
  top: -1px;
  bottom: auto;
  border: 10px solid;
  border-color: var(--message-bg-right) transparent transparent transparent;
}
.receiver-bubble::before {
  content: " ";
  position: absolute;
  width: 0;
  height: 0;
  right: auto;
  left: -11px;
  top: -1px;
  bottom: auto;
  border: 10px solid;
  border-color: var(--message-bg-left) transparent transparent transparent;
}
.typing-bubble::before {
  content: " ";
  position: absolute;
  width: 0;
  height: 0;
  right: auto;
  left: -11px;
  top: -1px;
  bottom: auto;
  border: 10px solid;
  border-color: var(--side-bar-bg) transparent transparent transparent;
}

.opacity-70 {
  opacity: 0.7 !important;
}
.bs-popover-top > .popover-arrow::after {
  border-top-color: var(--header-bg) !important;
}
.bg-popover {
  background: var(--header-bg) !important;
}

.attachment-container {
  max-width: 200px;
  max-height: 300px;
  overflow: hidden;
}
.center-absolute {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  margin: auto;
}
.download-btn {
  color: white;
  background: #00000060;
  border-radius: 50px;
}
.w-30 {
  min-width: 30% !important;
}
.holded {
  background: #0d6dfd2f !important;
}

.alert-container {
  position: fixed;
  top: 20;
  width: max-content;
  z-index: 1050;
  margin: auto;
  left: 0;
  right: 0;
  width: 100%;
}
.connectivity-alert {
  transition: opacity 0.5s ease, transform 0.5s ease;
  opacity: 0;
  transform: translateY(-50px);
}
.connectivity-alert.show {
  opacity: 1;
  transform: translateY(20px);
}
.connectivity-alert.hide {
  opacity: 0;
}

